--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!--=============== BOXICONS ===============-->
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
+  <link rel="icon" type="image/x-icon" href="./contents/img/logo2.png">
   <!--=============== CSS ===============-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./contents/css/media.css">
   <link rel="stylesheet" href="./contents/css/styles.css">
 
-  <title>Beginner | Random promise</title>
+  <title>ZARGARLIK</title>
 </head>
 
 <body>
@@ -28,11 +28,6 @@
         <i class='bx bx-x'></i>
       </div>
       <div class="nav__data">
-        <div class="nav__mask">
-          <!-- Change your profile picture -->
-          <img src=""" class=" nav__img">
-        </div>
-
         <span class="nav__greeting">ZARGARLIK</span>
         <h1 class="nav__name">
           <span class="navNameSpan" data-texts="Qimmatbaho taqinchoqlar,Oltinlar va Kumushlar"></span>
