--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <main class="main" id="main">
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
+      <div class="testMode">SITE TEST REJIMIDA ISHLAVOTTI</div>
       <nav class="header__nav container">
         <a href="#" class="header__logo">
           ZARGARLIK
@@ -221,14 +222,13 @@
           <div class="direct-contact-container">
 
             <ul class="contact-list">
-              <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">City,
-                    State</span></i></li>
+              <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">Uzbekiston, Toshkent</span></i></li>
 
               <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a
-                      href="tel:1-212-555-5555" title="Give me a call">(212) 555-2368</a></span></i></li>
+                      href="tel:+998331515253" title="Qo'ng'ropq qiling!">+998331515253</a></span></i></li>
 
-              <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#"
-                      title="Send me an email">hitmeup@gmail.com</a></span></i></li>
+              <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#muhsin.uz750@gmail.com"
+                      title="Email jo'nating">muhsin.uz750@gmail.com</a></span></i></li>
 
             </ul>
 
@@ -263,7 +263,7 @@
                   <div class="navLogo footerLogo">
                       <span class="nav__greeting">ZARGARLIK</span>
                   </div>
-                  <p style="font-size: 25px; padding-top: 10px; color: white;">Copyright 2021. Antools</p>
+                  <p style="font-size: 25px; padding-top: 10px; color: white;">Copyright 2021. BiSoft</p>
                   <p>Antool is a web collection of information on paid or free Design and Development tools</p>
               </div>
               <div class="footerTwo">
